Fix top-nav z-index

--- a/app/src/app/app.component.css
+++ b/app/src/app/app.component.css
@@ -25,7 +25,7 @@
     color: #FFFFFF;
     position: fixed;
     width: 100vw;
-    z-index: 1;
+    z-index: 2;
     padding-left: 4rem;
     box-shadow: 0rem 0.25rem 1rem 0.25rem #252a56;
 }
